// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OakFocusIndicator default render 1`] = `
.c0 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  box-shadow: none;
}

.c1:has(a:hover,button:hover) {
  box-shadow: none;
}

.c1:has( a, button) {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%),0 0 0 0.3rem rgba(87,87,87,100%);
}

.c1:has( a, button)  a,
.c1:has( a, button) button {
  outline: none;
}

.c1:has(a:active,button:active) {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%),0.25rem 0.25rem 0 rgba(87,87,87,100%);
}

<body>
  <div>
    <div
      class="c0 c1"
    />
  </div>
</body>
`;

exports[`OakFocusIndicator renders correctly with props set 1`] = `
.c0 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  box-shadow: 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c1:has(a:hover,button:hover) {
  background-color: #ffffff;
  box-shadow: 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c1:has( a, button) {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%),0 0 0 0.3rem rgba(87,87,87,100%);
}

.c1:has( a, button)  a,
.c1:has( a, button) button {
  outline: none;
}

.c1:has(a:active,button:active) {
  box-shadow: none;
}

<body>
  <div>
    <div
      class="c0 c1"
    />
  </div>
</body>
`;
